# crm

./: Cargo.toml  cliff.toml
.github/workflows/: build.yml
crm/: Cargo.toml  build.rs
crm/src/: client.rs  server.rs
crm/src/pb/: crm.rs
protos/: crm.proto
user-stat/: Cargo.toml
user-stat/examples/: gen.rs
user-stat/migrations/: 20240831071442_init.sql
