[workspace]
members = ["crm"]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.86"
prost = "0.13.1"
prost-build = "0.13.1"
prost-types = "0.13.1"
tonic = { version = "0.12.2", features = ["zstd", "tls"] }
tonic-build = "0.12.2"
tokio = { version = "1.39.3", features = ["rt", "rt-multi-thread", "macros"] }
