[workspace]
members = ["crm", "user-stat"]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.86"
chrono = { version = "0.4.38", features = ["serde"] }
prost = "0.13.2"
prost-build = "0.13.2"
prost-types = "0.13.2"
sqlx = { version = "0.8.1", features = [
  "chrono",
  "postgres",
  "runtime-tokio",
  "tls-rustls",
] }
serde = { version = "1.0.209", features = ["derive"] }
tonic = { version = "0.12.2", features = ["zstd", "tls"] }
tonic-build = "0.12.2"
tokio = { version = "1.40.0", features = ["rt", "rt-multi-thread", "macros"] }
